Major changes to frontend homepage

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
 
   <!-- Main CSS File -->
   <link rel="stylesheet" href="assets/css/demo35.min.css">
+  <link rel="stylesheet" href="assets/css/custom.css">
   <link rel="stylesheet" type="text/css" href="assets/vendor/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" type="text/css" href="assets/vendor/simple-line-icons/css/simple-line-icons.min.css">
   </head>
